unpackaged/main/default/objects/Opportunity/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <inlineHelpText>Date the annual or multi-year contract starts. Is equal to the date the customer signs the contract.</inlineHelpText>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>