unpackaged/main/default/objects/Opportunity/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <inlineHelpText>Date the annual or multi-year contract ends. This date is based on the duration of the contract is to be the Contract Effective Date plus the duration of the contract.</inlineHelpText>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>