unpackaged/main/default/objects/Opportunity/fields/po_to_f5__c.field-meta.xml
<CustomField>
    <fullName>po_to_f5__c</fullName>
    <description>Created for PSA Migration - will delete after</description>
    <label>PO # to F5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>