unpackaged/main/default/objects/Opportunity/fields/Reseller_Company_Name_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Company_Name_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for PSA Migration - will delete after</description>
    <label>Reseller Company Name (Lookup)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Reseller Company Name (Lookup))</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>