unpackaged/main/default/objects/Opportunity/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <description>Created for PSA Migration - will delete after</description>
    <label>Perpetual Order Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>