unpackaged/main/default/objects/Opportunity/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <inlineHelpText>Used as a single identifier for annual or multi-year contracts. Identifies which program and program version purchased.</inlineHelpText>
    <label>Service ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>