unpackaged/main/default/objects/Opportunity/fields/SOW_Status__c.field-meta.xml
<CustomField>
    <fullName>SOW_Status__c</fullName>
    <label>SOW Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A - Training</fullName>
            </value>
            <value>
                <fullName>Not Applicable to Project</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Scope Call Request</fullName>
            </value>
            <value>
                <fullName>Scope Cal Complete</fullName>
            </value>
            <value>
                <fullName>Estimating</fullName>
            </value>
            <value>
                <fullName>Estimating Complete</fullName>
            </value>
            <value>
                <fullName>Generating SOW</fullName>
            </value>
            <value>
                <fullName>Draft SOW Review</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Sent to Partner/Customer</fullName>
            </value>
            <value>
                <fullName>Signed/Executed SOW</fullName>
            </value>
            <value>
                <fullName>Change Order Request (COR)</fullName>
            </value>
            <value>
                <fullName>Signed/Executed (COR)</fullName>
            </value>
            <value>
                <fullName>Customer Delay</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Act of Acceptance Pending</fullName>
            </value>
            <value>
                <fullName>Act of Acceptance Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>