unpackaged/main/default/objects/Opportunity/fields/Theater2__c.field-meta.xml
<CustomField>
    <fullName>Theater2__c</fullName>
    <description>Created for PSA Migration - will delete after</description>
    <formula>CASE(Theater__c, "NAMER", "NAMER", "LATAM", "LATAM", "APCJ", "APCJ", "EMEA", "EMEA", null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theater</label>
    <type>Text</type>
</CustomField>